I deleted a lot of shit. Then I fixed some stupid bugs

--- a/System8/System8.React/ClientApp/src/custom.css
+++ b/System8/System8.React/ClientApp/src/custom.css
@@ -12,3 +12,17 @@ code {
   background-color: #1b6ec2;
   border-color: #1861ac;
 }
+
+ul {
+  list-style-type: none;
+  border: 1px solid black;
+  padding: 0px;
+}
+
+li {
+  text-align: center;
+}
+
+li.selected {
+  font-weight: bolder;   
+}
